structure html and css

--- a/style.sass
+++ b/style.sass
@@ -1,8 +1,62 @@
 /*base*/ 
 body
-    background-color: black
+    background-color: rgb(199, 199, 55)
     img
-        width: 150px
-        height: 150px
-h1 p
+        width: 250px
+        height: 250px
+        object-fit: couver
+
+    h1
         color: white
+    p
+        color: white
+    ul
+        list-style: none
+    a
+        text-decoration: none
+        color: black
+        font-family: Arial, Helvetica, sans-serif
+        font-size: 14px
+        /*specifique/ 
+header
+    background-color: beige
+    #nav-bar
+        display: flex
+        width: 100%
+        // border: solid 1px white
+
+    .name-image
+        width: 20%
+        display: flex
+        justify-content: space-around
+        flex-wrap: wrap
+        margin-right: 450px
+        margin-top: 20px
+        // border: solid 1px red
+        align-self: flex-start
+    div
+        p
+            color: black
+    .links
+        display: flex
+        width: 40%
+        // border: solid 1px white
+        flex-wrap: wrap
+        justify-content: space-around
+
+main
+
+    #about-me
+        display: flex
+        width: 50%
+        flex-direction: column
+        margin-left: 25%
+h1
+    text-align: center
+    font-family: Arial, Helvetica, sans-serif
+#sociale-media
+    display: flex
+    width: 20%
+    height: 80%
+    // border: solid 1px white
+    margin-left: -70px
