image changed plus icon

--- a/style.css
+++ b/style.css
@@ -27,10 +27,13 @@ body a {
 
 header {
   background-color: beige;
+  height: 310px;
+  margin-top: -10px;
 }
 header #nav-bar {
   display: flex;
   width: 100%;
+  height: 10%;
 }
 header .name-image {
   width: 20%;
@@ -47,8 +50,15 @@ header div p {
 header .links {
   display: flex;
   width: 40%;
+  height: 20%;
+  border: solid 1px red;
   flex-wrap: wrap;
   justify-content: space-around;
+  padding-top: 90px;
+  padding-bottom: 90px;
+}
+header .links a {
+  font-size: 20px;
 }
 
 main #about-me {
@@ -66,6 +76,7 @@ h1 {
 #sociale-media {
   display: flex;
   width: 20%;
-  height: 80%;
-  margin-left: -70px;
+  margin-top: -100;
+  margin-left: -150px;
+  justify-content: center;
 }/*# sourceMappingURL=style.css.map */
