--- a/style.sass
+++ b/style.sass
@@ -20,9 +20,12 @@ body
         /*specifique/ 
 header
     background-color: beige
+    height: 310px
+    margin-top: -10px
     #nav-bar
         display: flex
         width: 100%
+        height: 10%
         // border: solid 1px white
 
     .name-image
@@ -40,9 +43,14 @@ header
     .links
         display: flex
         width: 40%
-        // border: solid 1px white
+        height: 20%
+        border: solid 1px red
         flex-wrap: wrap
         justify-content: space-around
+        padding-top: 90px
+        padding-bottom: 90px
+        a
+            font-size: 20px
 
 main
 
@@ -57,6 +65,7 @@ h1
 #sociale-media
     display: flex
     width: 20%
-    height: 80%
+    margin-top: -100
+    margin-left: -150px
     // border: solid 1px white
-    margin-left: -70px
+    justify-content: center
