--- a/style.css
+++ b/style.css
@@ -49,16 +49,12 @@ header div p {
 }
 header .links {
   display: flex;
-  width: 40%;
+  width: 50%;
   height: 20%;
-  border: solid 1px red;
   flex-wrap: wrap;
-  justify-content: space-around;
-  padding-top: 90px;
-  padding-bottom: 90px;
-}
-header .links a {
-  font-size: 20px;
+  justify-content: space-between;
+  margin-top: 60px;
+  margin-right: 60px;
 }
 
 main #about-me {
@@ -77,7 +73,7 @@ h1 {
   display: flex;
   width: 20%;
   margin-top: -100;
-  margin-left: -150px;
+  margin-left: -100px;
   justify-content: center;
 }
 
@@ -89,7 +85,6 @@ h1 {
 
 .text-know-me {
   display: flex;
-  border: solide 1px green;
   flex-direction: column;
   width: 50%;
 }
@@ -97,7 +92,6 @@ h1 {
 .skills {
   display: flex;
   width: 20%;
-  border: solid 1px black;
   justify-content: center;
   flex-direction: column;
 }
@@ -112,7 +106,7 @@ h1 {
 input {
   width: 150px;
   height: 50px;
-  background-color: blue;
+  background-color: green;
 }
 
 .footer {
@@ -128,7 +122,7 @@ footer input {
 }
 
 textarea {
-  width: 250px;
+  width: 400px;
   height: 300px;
 }
 
