--- a/style.sass
+++ b/style.sass
@@ -42,15 +42,13 @@ header
             color: black
     .links
         display: flex
-        width: 40%
+        width: 50%
         height: 20%
-        border: solid 1px red
+        // border: solid 1px red
         flex-wrap: wrap
-        justify-content: space-around
-        padding-top: 90px
-        padding-bottom: 90px
-        a
-            font-size: 20px
+        justify-content: space-between
+        margin-top: 60px
+        margin-right: 60px
 
 main
 
@@ -66,7 +64,7 @@ h1
     display: flex
     width: 20%
     margin-top: -100
-    margin-left: -150px
+    margin-left: -100px
     // border: solid 1px white
     justify-content: center
 #know-me
@@ -76,14 +74,13 @@ h1
 
 .text-know-me
     display: flex
-    border: solide 1px green
     flex-direction: column
     width: 50%
 
 .skills
     display: flex
     width: 20%
-    border: solid 1px black
+    // border: solid 1px black
     justify-content: center
     flex-direction: column
 .skills
@@ -95,7 +92,7 @@ h1
 input
     width: 150px
     height: 50px
-    background-color: blue
+    background-color: green
 .footer
     display: flex
     flex-direction: column
@@ -106,7 +103,7 @@ footer
         height: 25px
         background-color: white
 textarea
-    width: 250px
+    width: 400px
     height: 300px
 button
     width: 150px
