--- a/style.css
+++ b/style.css
@@ -3,10 +3,11 @@ body {
   background-color: rgb(199, 199, 55);
 }
 body img {
-  width: 250px;
-  height: 250px;
-  -o-object-fit: couver;
-     object-fit: couver;
+  width: 100px;
+  height: 100px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-left: 10px;
 }
 body h1 {
   color: white;
@@ -27,21 +28,21 @@ body a {
 
 header {
   background-color: beige;
-  height: 310px;
+  height: 150px;
   margin-top: -10px;
 }
 header #nav-bar {
   display: flex;
   width: 100%;
-  height: 10%;
 }
 header .name-image {
   width: 20%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  flex-direction: column;
   flex-wrap: wrap;
-  margin-right: 450px;
-  margin-top: 20px;
+  margin-right: 300px;
+  margin-top: 10px;
   align-self: flex-start;
 }
 header div p {
@@ -89,18 +90,23 @@ h1 {
   width: 50%;
 }
 
-.skills {
+.my-skill {
   display: flex;
-  width: 20%;
-  justify-content: center;
   flex-direction: column;
 }
 
-.skills li {
+.skills {
   display: flex;
-  background-color: grey;
+  width: 20%;
+  height: 20%;
+  flex-wrap: wrap;
+}
+.skills li {
+  background-color: beige;
+  border: solid 1px black;
+  border-radius: 20%;
+  width: 150%;
   text-align: center;
-  width: 70px;
 }
 
 input {
