--- a/style.sass
+++ b/style.sass
@@ -2,9 +2,10 @@
 body
     background-color: rgb(199, 199, 55)
     img
-        width: 250px
-        height: 250px
-        object-fit: couver
+        width: 100px
+        height: 100px
+        object-fit: cover
+        margin-left: 10px
 
     h1
         color: white
@@ -20,21 +21,20 @@ body
         /*specifique/ 
 header
     background-color: beige
-    height: 310px
+    height: 150px
     margin-top: -10px
     #nav-bar
         display: flex
         width: 100%
-        height: 10%
-        // border: solid 1px white
 
     .name-image
         width: 20%
         display: flex
-        justify-content: space-around
+        justify-content: space-between
+        flex-direction: column
         flex-wrap: wrap
-        margin-right: 450px
-        margin-top: 20px
+        margin-right: 300px
+        margin-top: 10px
         // border: solid 1px red
         align-self: flex-start
     div
@@ -76,19 +76,21 @@ h1
     display: flex
     flex-direction: column
     width: 50%
-
+.my-skill
+    display: flex
+    flex-direction: column
 .skills
     display: flex
     width: 20%
-    // border: solid 1px black
-    justify-content: center
-    flex-direction: column
-.skills
+    height: 20%
+    flex-wrap: wrap
     li
-        display: flex
-        background-color: grey
+        background-color: beige
+        border: solid 1px black
+        border-radius: 20%
+        width: 150%
         text-align: center
-        width: 70px
+
 input
     width: 150px
     height: 50px
