--- a/style.sass
+++ b/style.sass
@@ -8,9 +8,11 @@ body
         margin-left: 10px
 
     h1
-        color: white
+        color: black
+
     p
         color: white
+        text-align: center
     ul
         list-style: none
     a
@@ -54,9 +56,15 @@ main
 
     #about-me
         display: flex
-        width: 50%
+        border: solid 1px white
         flex-direction: column
-        margin-left: 25%
+        text-align: center
+    #my-project
+        display: flex
+        height: 100px
+        justify-content: space-around
+        margin-top: 200px
+
 h1
     text-align: center
     font-family: Arial, Helvetica, sans-serif
@@ -95,19 +103,26 @@ input
     width: 150px
     height: 50px
     background-color: green
+
 .footer
     display: flex
     flex-direction: column
+    margin-left: 500px
     width: 20%
-footer
+
     input
         width: 250px
         height: 25px
         background-color: white
+
 textarea
     width: 400px
     height: 300px
-button
+.button
+    display: flex
+    justify-content: center
+    align-items: center
+    margin-left: 120px
     width: 150px
     height: 50px
     background-color: green
