--- a/style.sass
+++ b/style.sass
@@ -1,11 +1,13 @@
 /*base*/ 
 body
     background-color: rgb(199, 199, 55)
-    img
+    .img
         width: 100px
         height: 100px
         object-fit: cover
-        margin-left: 10px
+        display: flex
+        justify-items: end
+        z-index: 4
 
     h1
         color: black
@@ -22,35 +24,62 @@ body
         font-size: 14px
         /*specifique/ 
 header
-    background-color: beige
-    height: 150px
-    margin-top: -10px
-    #nav-bar
-        display: flex
-        width: 100%
 
-    .name-image
-        width: 20%
+.navbar
+    background-color: #333
+    padding: 15px
+    display: flex
+    justify-content: space-between
+    align-items: center
+
+.burger-menu
+    display: none
+    flex-direction: column
+    cursor: pointer
+
+.bar
+    width: 25px
+    height: 3px
+    background-color: #fff
+    margin: 6px 0
+
+.nav-list
+    list-style-type: none
+    margin: 0
+    padding: 0
+    display: flex
+
+    li
+        margin-right: 20px
+
+    a
+        text-decoration: none
+        color: #fff
+        font-weight: bold
+
+.content
+    padding: 20px
+
+@media screen and (max-width: 768px)
+    .burger-menu
         display: flex
-        justify-content: space-between
+
+    .nav-list
+        display: none
         flex-direction: column
-        flex-wrap: wrap
-        margin-right: 300px
-        margin-top: 10px
-        // border: solid 1px red
-        align-self: flex-start
-    div
-        p
-            color: black
-    .links
+        position: absolute
+        top: 60px
+        left: 0
+        width: 100%
+        background-color: #333
+        z-index: 1
+
+    .show
         display: flex
-        width: 50%
-        height: 20%
-        // border: solid 1px red
-        flex-wrap: wrap
-        justify-content: space-between
-        margin-top: 60px
-        margin-right: 60px
+
+    li
+        margin: 10px 0
+        text-align: center
 
 main
 
@@ -98,18 +127,10 @@ h1
         border-radius: 20%
         width: 150%
         text-align: center
-
-input
-    width: 150px
-    height: 50px
-    background-color: green
-
-.footer
+.form
     display: flex
+    align-items: center
     flex-direction: column
-    margin-left: 500px
-    width: 20%
-
     input
         width: 250px
         height: 25px
@@ -122,7 +143,6 @@ textarea
     display: flex
     justify-content: center
     align-items: center
-    margin-left: 120px
     width: 150px
     height: 50px
     background-color: green
