--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body h1 {
 body p {
   color: white;
   text-align: center;
+  font-size: 20px;
 }
 body ul {
   list-style: none;
@@ -30,17 +31,20 @@ body a {
 }
 
 .navbar {
-  background-color: #333;
-  padding: 15px;
+  background-color: #60663A;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-left: -8px;
+  margin-right: -10px;
+  margin-top: -8px;
 }
 
 .burger-menu {
   display: none;
   flex-direction: column;
   cursor: pointer;
+  margin-right: 20px;
 }
 
 .bar {
@@ -52,9 +56,9 @@ body a {
 
 .nav-list {
   list-style-type: none;
-  margin: 0;
-  padding: 0;
+  margin-right: 60px;
   display: flex;
+  flex-wrap: wrap;
 }
 .nav-list li {
   margin-right: 20px;
@@ -77,6 +81,7 @@ body a {
     display: none;
     flex-direction: column;
     position: absolute;
+    margin-left: -25px;
     top: 60px;
     left: 0;
     width: 100%;
@@ -93,7 +98,6 @@ body a {
 }
 main #about-me {
   display: flex;
-  border: solid 1px white;
   flex-direction: column;
   text-align: center;
 }
@@ -119,14 +123,15 @@ h1 {
 
 #know-me {
   display: flex;
-  border: solid 1px red;
   justify-content: space-around;
 }
 
 .text-know-me {
   display: flex;
   flex-direction: column;
-  width: 50%;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  width: 40%;
 }
 
 .my-skill {
@@ -136,9 +141,11 @@ h1 {
 
 .skills {
   display: flex;
-  width: 20%;
-  height: 20%;
+  justify-content: center;
   flex-wrap: wrap;
+  width: 150px;
+  margin-right: 50px;
+  margin-top: 20px;
 }
 .skills li {
   background-color: beige;
@@ -146,6 +153,16 @@ h1 {
   border-radius: 20%;
   width: 150%;
   text-align: center;
+}
+
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 150px;
+  height: 50px;
+  background-color: green;
+  margin-left: 10px;
 }
 
 .form {
@@ -160,15 +177,42 @@ h1 {
 }
 
 textarea {
-  width: 400px;
+  width: 310px;
   height: 300px;
 }
 
-.button {
+#container-project {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 150px;
-  height: 50px;
-  background-color: green;
+  flex-direction: column;
+  justify-items: center;
+  flex-wrap: wrap;
+}
+#container-project li {
+  text-align: center;
+  margin-left: -30px;
+}
+
+img {
+  width: 20%;
+}
+
+footer {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  background-color: #60663A;
+  position: relative;
+  margin-top: 110px;
+  margin-right: -10px;
+  margin-left: -10px;
+  text-align: center;
+}
+footer h3 {
+  color: white;
+  font-size: 25px;
+}
+footer .copyright {
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
 }/*# sourceMappingURL=style.css.map */
