--- a/style.sass
+++ b/style.sass
@@ -15,6 +15,7 @@ body
     p
         color: white
         text-align: center
+        font-size: 20px
     ul
         list-style: none
     a
@@ -26,16 +27,19 @@ body
 header
 
 .navbar
-    background-color: #333
-    padding: 15px
+    background-color: #60663A
     display: flex
     justify-content: space-between
     align-items: center
+    margin-left: -8px
+    margin-right: -10px
+    margin-top: -8px
 
 .burger-menu
     display: none
     flex-direction: column
     cursor: pointer
+    margin-right: 20px
 
 .bar
     width: 25px
@@ -45,9 +49,9 @@ header
 
 .nav-list
     list-style-type: none
-    margin: 0
-    padding: 0
+    margin-right: 60px
     display: flex
+    flex-wrap: wrap
 
     li
         margin-right: 20px
@@ -68,6 +72,7 @@ header
         display: none
         flex-direction: column
         position: absolute
+        margin-left: -25px
         top: 60px
         left: 0
         width: 100%
@@ -85,7 +90,7 @@ main
 
     #about-me
         display: flex
-        border: solid 1px white
+
         flex-direction: column
         text-align: center
     #my-project
@@ -102,31 +107,44 @@ h1
     width: 20%
     margin-top: -100
     margin-left: -100px
-    // border: solid 1px white
     justify-content: center
 #know-me
     display: flex
-    border: solid 1px red
-    justify-content: space-around
 
+    justify-content: space-around
 .text-know-me
     display: flex
     flex-direction: column
-    width: 50%
+    justify-content: space-around
+    flex-wrap: wrap
+    width: 40%
+
 .my-skill
     display: flex
     flex-direction: column
+
 .skills
     display: flex
-    width: 20%
-    height: 20%
+    justify-content: center
     flex-wrap: wrap
+    width: 150px
+    margin-right: 50px
+    margin-top: 20px
     li
         background-color: beige
         border: solid 1px black
         border-radius: 20%
         width: 150%
         text-align: center
+.button
+    display: flex
+    justify-content: center
+    align-items: center
+    width: 150px
+    height: 50px
+    background-color: green
+    margin-left: 10px
+
 .form
     display: flex
     align-items: center
@@ -137,12 +155,33 @@ h1
         background-color: white
 
 textarea
-    width: 400px
+    width: 310px
     height: 300px
-.button
+#container-project
     display: flex
-    justify-content: center
-    align-items: center
-    width: 150px
-    height: 50px
-    background-color: green
+    flex-direction: column
+    justify-items: center
+    flex-wrap: wrap
+    li
+        text-align: center
+        margin-left: -30px
+img
+    width: 20%
+footer
+
+    display: flex
+    justify-content: space-around
+    flex-wrap: wrap
+    background-color: #60663A
+    position: relative
+    margin-top: 110px
+    margin-right: -10px
+    margin-left: -10px
+    text-align: center
+    h3
+        color: white
+        font-size: 25px
+    .copyright
+        display: flex
+        flex-direction: column
+        justify-content: end
