--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*base*/ 
 body {
-  background-color: rgb(199, 199, 55);
+  background-color: rgba(199, 199, 90, 0.9);
 }
 body .img {
   width: 100px;
@@ -200,19 +200,16 @@ footer {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  background-color: #60663A;
   position: relative;
-  margin-top: 110px;
+  margin-top: 150px;
+  margin-bottom: -10px;
   margin-right: -10px;
   margin-left: -10px;
-  text-align: center;
-}
-footer h3 {
-  color: white;
-  font-size: 25px;
+  background-color: #60663A;
 }
 footer .copyright {
   display: flex;
   flex-direction: column;
   justify-content: end;
+  flex-wrap: wrap;
 }/*# sourceMappingURL=style.css.map */
