--- a/style.sass
+++ b/style.sass
@@ -1,6 +1,6 @@
 /*base*/ 
 body
-    background-color: rgb(199, 199, 55)
+    background-color: rgba(199,199 ,90 ,0.9)
     .img
         width: 100px
         height: 100px
@@ -172,16 +172,15 @@ footer
     display: flex
     justify-content: space-around
     flex-wrap: wrap
-    background-color: #60663A
     position: relative
-    margin-top: 110px
+    margin-top: 150px
+    margin-bottom: -10px
     margin-right: -10px
     margin-left: -10px
-    text-align: center
-    h3
-        color: white
-        font-size: 25px
+    background-color: #60663A
+
     .copyright
         display: flex
         flex-direction: column
         justify-content: end
+        flex-wrap: wrap
